<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/overview_linear_child">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="27dp"
            android:layout_marginTop="@dimen/common_s_spacing"
            android:textColor="@android:color/white"
            android:textSize="60sp"/>

        <TextView
            android:id="@+id/location_weather_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/degree"
            android:layout_below="@+id/degree"
            android:textColor="@android:color/white"/>

        <FrameLayout
            android:id="@+id/btn_share"
            style="@style/btn_menu_size"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="@dimen/common_s_spacing"
            android:layout_marginTop="@dimen/common_s_spacing">

            <ImageView
                android:layout_width="@dimen/menu_icon_size"
                android:layout_height="@dimen/menu_icon_size"
                android:layout_gravity="center"
                android:src="@drawable/ic_share"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/weather_type_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:divider="@drawable/ll_vertical_light_divider"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:showDividers="middle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/wind_direction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@android:color/white"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >

                    <TextView
                        android:id="@+id/wind_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/xxl_text_size"/>

                    <TextView
                        android:id="@+id/unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/wind_level"
                        android:layout_gravity="bottom"
                        android:layout_toEndOf="@id/wind_level"
                        android:text="级"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/m_text_size"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/relative_humidity_text"
                    android:textColor="@android:color/white"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >

                    <TextView
                        android:id="@+id/relative_humidity_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@android:color/white"
                        android:textSize="30sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/relative_humidity_value"
                        android:layout_toEndOf="@id/relative_humidity_value"
                        android:text="%"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/m_text_size"/>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/rainfall_text"
                    android:textColor="@android:color/white"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/rainfall_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@android:color/white"
                        android:textSize="30sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/rainfall_value"
                        android:layout_gravity="bottom"
                        android:layout_toEndOf="@id/rainfall_value"
                        android:text="mm"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/m_text_size"/>

                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/air_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rainfall_probability"
            android:layout_below="@+id/rainfall_probability"
            android:layout_marginTop="@dimen/common_xs_spacing"
            android:text="@string/air_pressure_text"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rainfall_probability"
            android:layout_below="@+id/air_pressure"
            android:layout_marginTop="@dimen/common_xs_spacing"
            android:text="@string/visibility_text"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/wind_degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rainfall_probability"
            android:layout_below="@+id/visibility"
            android:layout_marginTop="@dimen/common_xs_spacing"
            android:text="@string/wind_degree_text"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rainfall_probability"
            android:layout_below="@+id/wind_degree"
            android:layout_marginTop="@dimen/common_xs_spacing"
            android:text="@string/wind_speed_text"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/rainfall_probability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/degree"
            android:layout_below="@+id/location_weather_type"
            android:layout_marginTop="@dimen/common_xs_spacing"
            android:text="@string/rainfall_probability_text"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/sun_rise_set_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/degree"
            android:layout_below="@+id/wind_speed"
            android:layout_marginTop="@dimen/common_xs_spacing"
            android:text="@string/sun_rise_set_text"
            android:textColor="@android:color/white"/>

        <ImageView
            android:id="@+id/weather_l_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignBottom="@+id/visibility"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/btn_share"
            app:srcCompat="@drawable/ic_cloudy"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/future_weather_overview"
        style="@style/item_activity_tips"
        >

    </LinearLayout>

</LinearLayout>